# LazySqlite

./: Cargo.toml  LICENSE.md  README.md  viewer.db
.github/workflows/: release.yml
src/: autocomplete.rs  main.rs  sqlite.rs
